# imagedecoder.heif

./: .gitignore  .travis.yml  CMakeLists.txt  FindHEIF.cmake  Findde265.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/dav1d/: CMakeLists.txt  dav1d.sha256  dav1d.txt
depends/common/libaom/: flags.txt  libaom.sha256  libaom.txt
depends/common/libde265/: 0001-generate-pkgconfig.patch  0002-fix-some-warnings-on-windows.patch  01-build-static.patch  02-create-pkgconfig.patch  03-sse-check.patch  04-check-memalign.patch  04-no-executables.patch  05-no-executables.patch  05-windows-warnings.patch  06-fix-cpu-check.patch  06-windows-warnings.patch  07-add-missing-install-headers.patch  07-fix-cpu-check.patch  08-disable-sse-on-win-arm.patch  flags.txt  libde265.sha256  libde265.txt
depends/common/libheif/: 01-installation.patch  01-no-examples.patch  01-windows-warnings.patch  02-fix-static-win-linkage.patch  02-generate-pc.patch  02-remove-werror.patch  02-windows-warnings.patch  03-disable-gdk-pixbuf.patch  03-no-examples.patch  03-remove-werror.patch  04-disable-gdk-pixbuf.patch  04-fix-static-win-linkage.patch  04-windows-warnings.patch  05-disable-x265.patch  05-find-libde265-without-pkg.patch  06-fix-static-win-linkage.patch  06-remove-werror.patch  07-disable-gdk-pixbuf.patch  07-fix-aom-cmake-buildsys.patch  08-convert-if-only-bpp-change.patch  08-disable-x265.patch  09-ignore-invalid-clamp.patch  deps.txt  flags.txt  libheif.sha256  libheif.txt
imagedecoder.heif/: addon.xml.in
imagedecoder.heif/resources/language/resource.language.af_za/: strings.po
imagedecoder.heif/resources/language/resource.language.am_et/: strings.po
imagedecoder.heif/resources/language/resource.language.ar_sa/: strings.po
imagedecoder.heif/resources/language/resource.language.ast_es/: strings.po
imagedecoder.heif/resources/language/resource.language.az_az/: strings.po
imagedecoder.heif/resources/language/resource.language.be_by/: strings.po
imagedecoder.heif/resources/language/resource.language.bg_bg/: strings.po
imagedecoder.heif/resources/language/resource.language.bs_ba/: strings.po
imagedecoder.heif/resources/language/resource.language.ca_es/: strings.po
imagedecoder.heif/resources/language/resource.language.cs_cz/: strings.po
imagedecoder.heif/resources/language/resource.language.cy_gb/: strings.po
imagedecoder.heif/resources/language/resource.language.da_dk/: strings.po
imagedecoder.heif/resources/language/resource.language.de_de/: strings.po
imagedecoder.heif/resources/language/resource.language.el_gr/: strings.po
imagedecoder.heif/resources/language/resource.language.en_au/: strings.po
imagedecoder.heif/resources/language/resource.language.en_gb/: strings.po
imagedecoder.heif/resources/language/resource.language.en_nz/: strings.po
imagedecoder.heif/resources/language/resource.language.en_us/: strings.po
imagedecoder.heif/resources/language/resource.language.eo/: strings.po
imagedecoder.heif/resources/language/resource.language.es_ar/: strings.po
imagedecoder.heif/resources/language/resource.language.es_es/: strings.po
imagedecoder.heif/resources/language/resource.language.es_mx/: strings.po
imagedecoder.heif/resources/language/resource.language.et_ee/: strings.po
imagedecoder.heif/resources/language/resource.language.eu_es/: strings.po
lib/: kodi-TinyEXIF-note.txt
src/: HeifPicture.cpp  HeifPicture.h
(+53 files in other folders)
